1/12/12 names (no formulae) for solutes in combo box
1/12/12 capitalize solute names
12/6/11 #3175, add sim-sharing args to usages of SliderThumbDragHandler
11/3/11 delete empty modules
# 0.00.13 (58298) Nov 2, 2011
11/2/11 Dilution: display "Solution" on right-most beaker when V2-V1=0
11/2/11 remove general beaker label updater from BeakerNode, since requirements are different for every beaker
11/2/11 try red solute in Dilution tab
11/2/11 change request: revert color change to "=" in Dilution
# 0.00.12 (58273) Nov 1, 2011
11/1/11 version to address fixes and change requests
11/01/11 fix problem with water volume in Dilution tab after Reset All
11/01/11 fix drag handler for slider thumbs so they don't jump when initially dragged
11/01/11 change request: used yellow for "=" in Dilutions
11/01/11 change request: when a beaker's volume goes to zero, show no label on the beaker
11/01/11 doc
11/01/11 pause the clock in the first 2 tabs, since there's nothing dynamic here
# 0.00.11 (58264) Nov 1, 2011
11/1/11 version with first functionally-complete Diluton tab
11/01/11 add a subtle background to sliders, so they look more like sliders
11/01/11 repackage
11/01/11 Dilution: clean up canvas constructor, address open issues
11/01/11 Molarity: clean up canvas constructor, address open issues
11/01/11 Dilution: if a beaker's concentration is zero, label it as H2O
11/01/11 Dilution: add gradient to M1 slider
11/01/11 common: remove unnecessary subclassing of DilutionsSliderNode
11/01/11 Dilution: first pass at M1 slider, missing gradient
11/01/11 Dilution: update moles of solute when M1 or V1 changes
11/01/11 Dilution: update water volume when V1 or V2 changes
11/01/11 handle zero-volume Solution properly
10/31/11 since size of beakers labels is static, scale text to fit
# 0.00.10 (58200) Oct 31, 2011
10/31/11 version to demo alternative layout of Dilution play area
10/31/11 Dilution: try alternative layout of things to right of "=" sign, left-to-right order is: M2,V2,Beaker