@@ -15,6 +15,7 @@ low=low
 lots=lots
 makeDilutions=Make Dilutions
 molarity=Molarity
+molarity.name=Molarity
 none=none
 saturated=Saturated!
 small=small
