@@ -2,4 +2,4 @@
 project.depends.data=data
 project.depends.source=src
 project.depends.lib=phetcommon piccolo-phet chemistry
-project.flavor.dilutions.mainclass=edu.colorado.phet.dilutions.DilutionsApplication
+project.flavor.molarity.mainclass=edu.colorado.phet.dilutions.MolarityApplication
