@@ -14,6 +14,8 @@ import edu.colorado.phet.common.phetcommon.resources.PhetResources;
 public class DilutionsResources {
 
     public static final String PROJECT_NAME = "dilutions";
+    public static final String MOLARITY_FLAVOR = "molarity";
+    public static final String DILUTIONS_FLAVOR = "dilutions";
     public static final PhetResources RESOURCES = new PhetResources( PROJECT_NAME );
 
     // Strings
